# wb_bot

./: .env.example  README.md  backend.dockerfile  docker-compose.yaml
app/: pyproject.toml
app/app/: loader.py  main.py  reloader.py
app/app/core/: config.py  container.py  logger.py
app/app/db/: init_redis.py  session.py
app/app/handlers/: __init__.py  routing.py  start.py  stat.py
app/app/keyboards/: keyboard.py
app/app/middlewares/: session_middleware.py  throttling.py
app/app/models/: __init__.py  mixins.py  supplier_stat.py  telegram_user.py
app/app/repositories/: base.py  supplier_stat_repository.py  telegram_user.py
app/app/schemas/: supplier_stat_schema.py  telegram_user.py
app/app/services/: excel_export_service.py  statics_api_service.py  supplier_stat_service.py  telegram_user_service.py
app/app/states/: state.py
app/migrations/: env.py
app/migrations/versions/: 07dffb995258_update_order_model.py  558238208986_inital_migration.py  67d27bfc217e_orders_and_sales.py  a3b0edf18375_sale_model_update.py
