[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = "bot"
authors = ["timofejkazakov <t.kazakov@agora.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.2.0"
alembic = "^1.13.0"
sqlalchemy = "^2.0.23"
loguru = "^0.7.2"
dependency-injector = "^4.41.0"
psycopg2-binary = "^2.9.9"
flask-admin = "^1.6.1"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"
flask-login = "^0.6.3"
watchdog = "^3.0.0"
httpx = "^0.27.0"
pandas = "^2.2.2"
redis = "^4.1.4"
aioredis = "^2.0.1"
numpy = "^1.26.4"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
